--- a/css-2/admin.html
+++ b/css-2/admin.html
@@ -13,10 +13,10 @@
     />
     <link rel="stylesheet" href="assets/stlesheet/css-2.css" />
   </head>
-  <body class="login-body">
+  <body class="login-body admin-body">
     <section>
         <div class="container d-flex justify-content-center mt-5 pt-5">
-            <h4 class="display-5 form-signup-heading" style="color: white;">LOGIN</h4>
+            <h4 class="display-5 form-signup-heading" style="color: white;">IS ADMIN</h4>
         </div>
         <div
           class="container
@@ -24,7 +24,7 @@
         >
           <form class="bg-light p-5 padding_two">
             <div class="form-group mb-3">
-              <label class="mb-2" for="exampleInputEmail1">Email address</label>
+              <label class="mb-2" for="exampleInputEmail1">User Name</label>
               <input
                 type="email"
                 class="form-control"
@@ -49,12 +49,11 @@
                 >Check me out</label
               >
             </div> -->
-            <button type="submit" class="btn pl-5 pr-5 third">Login</button>
-            <p class="mt-3 pt-2 pb-2">
-                <small> Don't have an account ? <span class="fourth"><a href="signup.html"><b>Sign Up</b></a></span></small>
+            <button type="submit" class="btn pl-5 pr-5 third">GET STARTED</button>
+            <!-- <p class="mt-3 pt-2 pb-2">
+                <small> Don't have an account ? <span class="fourth"><a href="signup.html">Sign Up</a></span></small>
              
-            </p>
-            <small>Are you an Admin! <b><span class="fourth"><a href="admin.html">Admin ?</a></span></b></small>
+            </p> -->
           </form>
         </div>
         <!-- <img src="assets/media/pic1.jpeg" class="img-fluid" alt="Responsive image"> -->
