--- a/css-2/profile.html
+++ b/css-2/profile.html
@@ -15,83 +15,83 @@
 </head>
 <body class="login-body profile-body">
     <main>
-        <section class="bg-light container p-5" id="position1">
+        <section class="container p-5">
             <div>
                 <img class="profile-photo" src="assets/media/pic6.jpg" alt="">
             </div>
-            <section class="profile-container1">
+            <section id="position1">
               <form class="profile-container">
-                <div class="row">
-                  <div class="col">
-                    <label for="exampleInputEmail1">Name</label>
-                    <input type="name" class="form-control">
-                  </div>
-                  <div class="col">
-                    <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control">
-                  </div>
-                </div>  
-              </form>           
-              <div class="form-group profile-container">
-                  <label for="exampleInputEmail1">Twitter</label>
-                  <input type="link" class="form-control" placeholder="paste the link" id="exampleInputEmail1" aria-describedby="emailHelp">
-              </div>
-              <div class="form-group profile-container">
-                <div class="row">
-                  <div class="col">
-                    <label for="exampleInputEmail1">Github</label>
-                    <input type="link" class="form-control" placeholder="paste the link">
-                  </div>
-                  <div class="col">
-                    <label for="exampleInputEmail1">Linkedin</label>
-                    <input type="link" class="form-control" placeholder="paste the link">
-                  </div>
-                </div>  
-              </div>
-              <div class="form-group profile-container">
-                <label for="exampleInputEmail1">Codewars</label>
+              <div class="row">
+                <div class="col">
+                  <label for="exampleInputEmail1">Name</label>
+                  <input type="name" class="form-control">
+                </div>
+                <div class="col">
+                  <label for="exampleInputEmail1">Email</label>
+                  <input type="email" class="form-control">
+                </div>
+              </div>  
+            </form>           
+            <div class="form-group profile-container">
+                <label for="exampleInputEmail1">Twitter</label>
                 <input type="link" class="form-control" placeholder="paste the link" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
-              <div class="form-group profile-container">
-                <label for="exampleInputPassword1">About Me</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-              <div class="form-group profile-container">
-                <label for="exampleInputPassword1">Past Experiences</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <div class="form-group profile-container">
+              <div class="row">
+                <div class="col">
+                  <label for="exampleInputEmail1">Github</label>
+                  <input type="link" class="form-control" placeholder="paste the link">
                 </div>
-              <div class="form-group profile-container">
-                <label for="exampleInputPassword1">Projects</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <div class="col">
+                  <label for="exampleInputEmail1">Linkedin</label>
+                  <input type="link" class="form-control" placeholder="paste the link">
+                </div>
+              </div>  
+            </div>
+            <div class="form-group profile-container">
+              <label for="exampleInputEmail1">Codewars</label>
+              <input type="link" class="form-control" placeholder="paste the link" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="form-group profile-container">
+              <label for="exampleInputPassword1">About Me</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="form-group profile-container">
+              <label for="exampleInputPassword1">Past Experiences</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
-              <div class="profile-container">
-                <div class="row">
-                  <div class="form-group col">
-                    <label for="exampleFormControlSelect1">Education</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
-                      <option>/*select*/</option>
-                      <option>B.tech</option>
-                      <option>m.tech</option>
-                      <option>Degree</option>
-                      <option>Intermediate(+2)</option>
-                      <option>Post Graduate</option>
-                      <option>Graduate</option>
-                      <option>Diploma</option>
-                    </select>
-                  </div>
-                  <div class="form-group col">
-                    <label for="exampleFormControlSelect1">Is Employed</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
-                      <option>Yes</option>
-                      <option>No</option>
-                    </select>
-                  </div>
-                </div>  
-              </div>
-              <div class="profile-container save1">
-                <button type="submit" class="btn pl-5 pr-5 third">Save</button>
-              </div>
-            </section>
+            <div class="form-group profile-container">
+              <label for="exampleInputPassword1">Projects</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="profile-container">
+              <div class="row">
+                <div class="form-group col">
+                  <label for="exampleFormControlSelect1">Education</label>
+                  <select class="form-control" id="exampleFormControlSelect1">
+                    <option>/*select*/</option>
+                    <option>B.tech</option>
+                    <option>m.tech</option>
+                    <option>Degree</option>
+                    <option>Intermediate(+2)</option>
+                    <option>Post Graduate</option>
+                    <option>Graduate</option>
+                    <option>Diploma</option>
+                  </select>
+                </div>
+                <div class="form-group col">
+                  <label for="exampleFormControlSelect1">Is Employed</label>
+                  <select class="form-control" id="exampleFormControlSelect1">
+                    <option>Yes</option>
+                    <option>No</option>
+                  </select>
+                </div>
+              </div>  
+            </div>
+            <div class="profile-container save1">
+              <button type="submit" class="btn pl-5 pr-5 third">Save</button>
+            </div>
+           </section>
         </section>
     </main>
 </body>
