--- a/css-2/signup.html
+++ b/css-2/signup.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="assets/stlesheet/css-2.css" />
   </head>
-  <body class="login-body">
+  <body class="login-body signup-body">
     <section>
         <header>
 
