--- a/css-2/css-2.html
+++ b/css-2/css-2.html
@@ -11,6 +11,9 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/8a0092090f.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="assets/stlesheet/css-2.css" />
   </head>
   <body class="login-body">
@@ -22,6 +25,9 @@
           class="container
         d-flex justify-content-center"
         >
+        <div class="cross">
+          <i class="fas fa-times-circle"></i>
+        </div>
           <form class="bg-light p-5 padding_two">
             <div class="form-group mb-3">
               <label class="mb-2" for="exampleInputEmail1">Email address</label>
