--- a/css-2/signup.html
+++ b/css-2/signup.html
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/stlesheet/css-2.css" />
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/8a0092090f.js" crossorigin="anonymous"></script>
   </head>
   <body class="login-body signup-body">
     <section>
@@ -29,6 +31,9 @@
               class="container
             d-flex justify-content-center"
             >
+            <div class="cross">
+              <i class="fas fa-times-circle"></i>
+            </div>
               <form class="w-40 background-form padding_one p-5">
                 <div class="form-group mb-3">
                   <label class="mb-2" for="exampleInputEmail1">Your Name</label>
@@ -61,9 +66,9 @@
                       id="exampleInputEmail1"
                       aria-describedby="emailHelp"
                     />
-                    <small id="emailHelp" class="form-text text-muted"
+                    <!-- <small id="emailHelp" class="form-text text-muted"
                       >Enter your name</small
-                    >
+                    > -->
                   </div>
                   <div class="form-group">
                     <label class="mb-2" for="exampleInputPassword1">ReEnter Password</label>
@@ -74,6 +79,10 @@
                     />
                   </div>
                   <button type="submit" class="btn pl-5 pr-5 third">Get Started</button>
+                  <p class="mt-3 pt-2 pb-2">
+                    <small> Already have an account ? <span class="fourth"><a href="css-2.html"><b>Login</b></a></span></small>
+                 
+                </p>
                 <!-- <div class="form-group form-check">
                   <input type="checkbox" class="form-check-input" /> -->
                   <!-- <small id="emailHelp" class="form-text text-muted"
